--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,1 +1,16 @@
-nfkjdsfskhkjasdhkjasdbaskcbnkjxbnckjadbskjfabshkjdbhjaskbdkjasb
+ 
+
+  
+    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light bgimg">
+      <div class="col-md-5 p-lg-5 mx-auto my-5 traslucid">
+        <h1 class="display-4 font-weight-normal">Create your own story</h1>
+        <p class="lead font-weight-normal">Build amazing stories of your journeys from a scratch</p>
+        <a href="/users/new" class="btn btn-primary stretched-link">Register now!</a>
+      </div>
+      <div class="product-device box-shadow d-none d-md-block"></div>
+      <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
+    </div>
+
+    
+
+   
