--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Tweet Hack</title>
+  <title>Argonaut</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -18,6 +18,7 @@
   <div class="container mt-5 pb-5">
     {{>alert}}
     {{{body}}}
+    {{>footer}}
   </div>
 </body>
 
