Added input map

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,6 +9,9 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
 
+   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/js/index.js"></script>
 </head>
@@ -20,6 +23,8 @@
     {{{body}}}
     {{>footer}}
   </div>
+ 
 </body>
+
 
 </html>
