--- a/views/users/login.hbs
+++ b/views/users/login.hbs
@@ -1,18 +1,9 @@
 <form action="/login" method="POST" class="mb-3" autocomplete="off">
 
-
-
-
-
-
-
-
-
-
   <div class="form-group form-signin">
     <label for="email" class="sr-only">Email address</label>
     <input name="email" type="email" class="form-control {{#if error.email }}is-invalid{{/if}}" id="email"
-      placeholder="Enter name" value="{{ user.email }}">
+      placeholder="Enter email" value="{{ user.email }}">
 
     {{#if error.email}}
     <div class="invalid-feedback">
