--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -10,6 +10,9 @@
         <a class="py-2 d-none d-md-inline-block" href="#">Support</a> --}}
         <a class="py-2 d-none d-md-inline-block" href="../users/new">Register</a>
         <a class="py-2 d-none d-md-inline-block" href="../login">Login</a>
+        <form action="/logout" method="post">
+  <button type="submit" class="btn btn-outline-secondary btn-sm">Logout</button>
+</form>
          <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
