--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,89 +1,44 @@
-<form action="/users" method="POST" enctype="multipart/form-data">
+<form method="POST" action="/users">
   <div class="form-group">
     <label for="name">Name</label>
-    <input name="name" type="text" class="form-control {{#if error.name }}is-invalid{{/if}}" id="name"
-      placeholder="Enter name" value="{{ user.name }}">
+    <input name="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name">
+    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+  </div>
 
-    {{#if error.name}}
-    <div class="invalid-feedback">
-      {{error.name.message}}
-    </div>
-    {{/if}}
+  <div class="form-group">
+    <label for="surName">Surname</label>
+    <input name="surName" type="text" class="form-control" id="exampleInputPassword1" placeholder="Surname">
+  </div>
+
+  <div class="form-group">
+    <label for="email">email</label>
+    <input name="email" type="text" class="form-control" id="exampleInputPassword1" placeholder="email">
   </div>
 
   <div class="form-group">
     <label for="username">Username</label>
-    <input name="username" type="text" class="form-control {{#if error.username }}is-invalid{{/if}}" id="username"
-      placeholder="Enter username" value="{{ user.username }}">
-
-    {{#if error.username}}
-    <div class="invalid-feedback">
-      {{error.username.message}}
-    </div>
-    {{/if}}
-  </div>
-
-  <div class="form-group">
-    <label for="email">Email</label>
-    <input name="email" type="email" class="form-control {{#if error.email }}is-invalid{{/if}}" id="email"
-      placeholder="Enter email" value="{{ user.email }}">
-
-    {{#if error.email}}
-    <div class="invalid-feedback">
-      {{error.email.message}}
-    </div>
-    {{/if}}
-  </div>
-
-  <div class="form-group">
-    <label for="avatar">Avatar</label>
-    <input name="avatar" type="file" class="form-control-file {{#if error.avatar }}is-invalid{{/if}}" id="avatar"
-      placeholder="Enter avatar url" value="{{ user.avatar }}">
-
-    {{#if error.avatar}}
-    <div class="invalid-feedback">
-      {{error.avatar.message}}
-    </div>
-    {{/if}}
+    <input name="username" type="text" class="form-control" id="exampleInputPassword1" placeholder="Username">
   </div>
 
   <div class="form-group">
     <label for="password">Password</label>
-    <input name="password" type="password" class="form-control {{#if error.password }}is-invalid{{/if}}" id="password"
-      placeholder="password" value="{{ user.password }}">
-
-    {{#if error.password}}
-    <div class="invalid-feedback">
-      {{error.password.message}}
-    </div>
-    {{/if}}
-  </div>
-
-   <div class="form-group">
-    <label for="password">Repeat password</label>
-    <input name="repeatPassword" type="password" class="form-control {{#if error.password }}is-invalid{{/if}}" id="repeatPassword"
-      placeholder="repeatPassword" value="{{ user.repeatPassword }}">
-
-    {{#if error.password}}
-    <div class="invalid-feedback">
-      {{error.password.message}}
-    </div>
-    {{/if}}
+    <input name="password" type="text" class="form-control" id="exampleInputPassword1" placeholder="Password">
   </div>
 
   <div class="form-group">
-    <label for="bio">Bio</label>
-    <textarea name="bio" type="text" class="form-control {{#if error.bio }}is-invalid{{/if}}" id="bio"
-      placeholder="Enter bio" value="{{ user.bio }}" rows="4"></textarea>
-
-    {{#if error.bio}}
-    <div class="invalid-feedback">
-      {{error.bio.message}}
-    </div>
-    {{/if}}
+      <label for="repeatPassword">Repeat password</label>
+      <input name="repeatPassword" type="text" class="form-control" id="exampleInputPassword1" placeholder="Repeat Password">
   </div>
 
-  <button type="submit" class="btn btn-primary">
-    Sign up
-  </button>
+  <div class="form-group">
+      <label for="avatar">Avatar</label>
+      <input name="avatar" type="text" class="form-control" id="exampleInputPassword1" placeholder="avatar">
+  </div>
+
+   <div class="form-group">
+      <label for="bio">Bio</label>
+      <input name="bio" type="text" class="form-control" id="exampleInputPassword1" placeholder="bio">
+  </div>
+
+  <button type="submit" class="btn btn-primary">Submit</button>
 </form>
