--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -33,10 +33,11 @@ label {
 
 /* Slideshow container */
 
-.blog-slider__container {
+
+/* .blog-slider__container {
     width: 300px;
     position: relative;
-    /* top: 610px; */
+    top: 610px;
     margin: 10px, 10px 10px 10px;
     height: 800px;
     background-color: red;
@@ -49,7 +50,6 @@ label {
 }
 
 
-/* Next & previous buttons */
 
 .prev,
 .next {
@@ -68,7 +68,6 @@ label {
 }
 
 
-/* Position the "next button" to the right */
 
 .next {
     right: 0;
@@ -76,7 +75,6 @@ label {
 }
 
 
-/* On hover, add a black background color with a little bit see-through */
 
 .prev:hover,
 .next:hover {
@@ -84,7 +82,6 @@ label {
 }
 
 
-/* Caption text */
 
 .blog-slider__text {
     color: #f2f2f2;
@@ -97,7 +94,6 @@ label {
 }
 
 
-/* Number text (1/3 etc) */
 
 .blog-slider__numbertext {
     color: #f2f2f2;
@@ -108,7 +104,7 @@ label {
 }
 
 
-/* The dots/bullets/indicators */
+
 
 .blogSlider__dots {
     text-align: center;
@@ -130,7 +126,7 @@ label {
 }
 
 
-/* Fading animation */
+
 
 .fade {
     -webkit-animation-name: fade;
@@ -155,4 +151,4 @@ label {
     to {
         opacity: 1
     }
-}
+} */
