--- a/views/maps/new.hbs
+++ b/views/maps/new.hbs
@@ -1,4 +1,5 @@
  {{!-- <form action="/maps" method="POST" > --}}
+ <form onsubmit="return saveData()">
           <div class="form-group">
             <label for="title">Enter title</label>
             <input name="title" type="text" class="form-control title" id="title"
@@ -12,8 +13,8 @@
             
         </div>
 
-<button onclick="saveData()">Click me</button>
-
+<input type="submit" value="submit">
+</form>
   <button type="submit" class="btn btn-primary">
     Create map
   </button>
@@ -21,20 +22,21 @@
  
  
  <script>
-
+  const arrObj = []
 
      function saveData(){
      
          let title = document.getElementById("title").value
          let description = document.getElementById("description").value
-         console.log(title)
+        // console.log(title)
           let slide = 0
         let element = {}
-        const arrObj = []
+      
         element.title = title
         element.description = description
         arrObj.push({element: element})
         console.log(arrObj)
+        return false
          /* for (let i =0 ; i < title.length; i++){
              arrTitles[i] = title[i].value;
             console.log(title[i].value)
