Coordenadas Agregadas al objeto arrObj / creación de marker

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,9 @@
    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
 
+    <script src='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
+    <link href='https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
+
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="/js/index.js"></script>
 </head>
