--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,6 +29,15 @@ label {
     /* height: 800px; */
 }
 
+.marker {
+    background-image: url('<img src="https://img.icons8.com/office/16/000000/marker.png">');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
 
 /* Slideshow container */
 
