--- a/views/maps/new.hbs
+++ b/views/maps/new.hbs
@@ -111,7 +111,7 @@ map.on('click', function (b){
 
 let popup = new mapboxgl.Popup({closeOnClick: true})
 .setLngLat([long, lat])
-.setHTML('<h1>Yout location</h1>')
+.setHTML('<h1>Your location</h1>')
 .addTo(map);
 
   //console.log(b.lngLat.lng)
