Listed all the maps

--- a/views/maps/details.hbs
+++ b/views/maps/details.hbs
@@ -1,6 +1,32 @@
 
+<p>{{map.id}}</p>
 
-<div href="/maps/{{ map.id }}" id="map"></div>
+
+
+<div id="map">
+
+<div id="slides_container" style="display:block;">
+    {{!-- <div id="dots"></div>
+
+    <div id="slides"></div> --}}
+
+    <p>
+    {{map.slides[0].title}}    
+    </p>
+
+    <ul id="navButtons">
+      <li><a class="prev"></a></li>
+      <li><a class="next"></a></li>
+    </ul>
+  </div>
+
+
+
+
+</div>
+
+
+
 
 {{!-- 5debafdedf9f632928e59250 --}}
 
