--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,6 +38,19 @@ label {
     cursor: pointer;
 }
 
+#slides_container {
+    display: none;
+    position: absolute;
+    top: 40px;
+    left: 40px;
+    width: 320px;
+    padding: 40px;
+    padding-right: 20px;
+    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.7);
+    z-index: 10
+}
+
 
 /* Slideshow container */
 
