--- a/views/maps/index.hbs
+++ b/views/maps/index.hbs
@@ -16,30 +16,52 @@
 
 
 
-{{#each maps}}
 
-          <div class="row">
+
+
+{{!-- <h2>Movies</h2>
+<a href="/movies/create" class="btn btn-success mb-3">Add</a>
+{{#each movies}}
+<div class="card">
+  <div class="card-body">
+    <h5 class="card-title">
+      {{this.title}}
+    </h5>
+    <p><small>{{this.genre}}</small></p>
+   
+    <a href="/movies/{{this.id}}" class="btn btn-info">
+      See details
+    </a>
+    <a href="/movies/{{this.id}}/edit" class="btn btn-success">
+      Edit
+    </a>
+    <form class="d-inline" action="/movies/{{this.id}}/delete" method="POST">
+      <button class="btn btn-danger" type="submit">Delete</button>
+    </form>
+  </div>
+</div> --}}
+
+
+          <div  class="row">
+            {{#each maps}}
             <div class="col-md-4">
               <div class="card mb-4 box-shadow">
                 <img class="card-img-top" src="../../images/example.jpg" alt="Card image cap">
                 <div class="card-body">
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h3 class="card-text">{{this.title}}</h3>
+                  <p class="card-text">{{this.description}}</p>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                      <button href="/maps/{{ this.id }}/details" type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                      <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
+                      <a href="/maps/{{this._id}}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                      <a type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
                     </div>
                     <small class="text-muted">9 mins</small>
                   </div>
                 </div>
               </div>
             </div>
-            
+            {{/each}}
                 </div>
-
-
-{{/each}}
-
 
 
 
