Created input map title/backend map title

--- a/views/maps/details.hbs
+++ b/views/maps/details.hbs
@@ -9,9 +9,13 @@
     {{!-- <div id="dots"></div>
 
     <div id="slides"></div> --}}
+    <h1>
+        
+    </h1>
 
     <p>
-    {{map.slides[0].title}}    
+    {{slides.title}}    
+
     </p>
 
     <ul id="navButtons">
