--- a/views/maps/new.hbs
+++ b/views/maps/new.hbs
@@ -2,9 +2,28 @@
 
 <div>
 
+   <form onsubmit="return saveMapData()">
+          <div class="form-group">
+            <label for="mapTitle">Enter map title</label>
+            <input name="mapTitle" type="text" class="form-control title" id="mapTitle"
+            placeholder="Enter title" value="mapTitle">
+            </div>
+
+            <div class="form-group">
+            <label for="mapDescription">Enter map description</label>
+            <textarea name="mapDescription" type="text" class="form-control description"  id="mapDescription"
+            placeholder="Enter text" value="mapDescription" rows="4"></textarea>
+
+            
+        </div>
+
+       
+<input type="submit" value="submit">
+</form>
+
  <form onsubmit="return saveData()">
           <div class="form-group">
-            <label for="title">Enter title</label>
+            <label for="title">Enter slide title</label>
             <input name="title" type="text" class="form-control title" id="title"
             placeholder="Enter title" value="title">
             </div>
@@ -51,7 +70,8 @@ let title = ""
 let description = ""
 let longitude = ""
 let latitude = "" 
-
+let mapTitle = ""
+let mapDescription = ""
 
 
       mapboxgl.accessToken = 'pk.eyJ1IjoiaXJvbm1vZHVsZTIiLCJhIjoiY2szZnQzdzN0MDdzNjNjbzQ5amZ5M24wMyJ9.1AdiIc2dD4lw7Toih03G0Q';
@@ -121,24 +141,48 @@ let popup = new mapboxgl.Popup({closeOnClick: true})
 });
 
 const arrObj = []
+const mapObj = []
 
      function saveData(){
      
+           
+
+
           title = document.getElementById("title").value
           description = document.getElementById("description").value
          
         // console.log(title)
           let slide = 0
         let element = {}
+       
       
+
+     
         element.title = title
         element.description = description
        element.longitude = longitude
         element.latitude = latitude
         arrObj.push({...element})
+       
         console.log(arrObj)
         return false
          
+     }
+
+     function saveMapData(){
+
+       mapTitle = document.getElementById("mapTitle").value
+          mapDescription = document.getElementById("mapDescription").value
+
+ let mapElement = {}
+           mapElement.title = mapTitle
+        mapElement.description = mapDescription
+
+         mapObj.push({...mapElement})
+
+         console.log(mapObj)
+        return false
+
      }
 
 /*map.on('click', addMarker);
