Trying to render coordinates

--- a/views/maps/details.hbs
+++ b/views/maps/details.hbs
@@ -1,5 +1,5 @@
 
-<p>{{map.id}}</p>
+
 
 
 
@@ -19,9 +19,20 @@
 
     <p>
    {{s.description}} 
-    
-
     </p>
+
+
+    <p>
+   {{s.long}} 
+    </p>
+
+      <p>
+   {{s.lat}} 
+    </p>
+
+{{!-- <input id="long" value={{s.long}}/>
+<p id="lat">{{s.lat}}</p> --}}
+
 
     <ul id="navButtons">
       <li><a class="prev"></a></li>
@@ -44,12 +55,22 @@
 
 <script>
 
+
+let longitude = ""
+let latitude = 0     
+
+longitude = document.getElementById('long').value
+console.log(longitude)
+latitude = Number(document.getElementById('lat').value)
+
+
+
 mapboxgl.accessToken = 'pk.eyJ1IjoiaXJvbm1vZHVsZTIiLCJhIjoiY2szZnQzdzN0MDdzNjNjbzQ5amZ5M24wMyJ9.1AdiIc2dD4lw7Toih03G0Q';
 
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/streets-v11',
-            center: [-77.04, 38.907],
+            center: [longitude, latitude],
             zoom: 9.0,
         });
 
