--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,34 +23,38 @@ label {
 
 #map {
     position: relative;
-    top: -840px;
+    /*top: -840px;*/
     width: 100%;
     height: 800px;
-    z-index: -100;
     /* height: 800px; */
+}
+
+.marker {
+    background-image: url('<img src="https://img.icons8.com/office/16/000000/marker.png">');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 
 /* Slideshow container */
 
-.blog-slider__container {
+
+/* .blog-slider__container {
     width: 300px;
     position: relative;
-    /* top: 610px; */
+    top: 610px;
     margin: 10px, 10px 10px 10px;
     height: 800px;
     background-color: red;
 }
-
 .blogSlides div {
     width: 200px;
     height: 300px;
     background-color: red;
 }
-
-
-/* Next & previous buttons */
-
 .prev,
 .next {
     cursor: pointer;
@@ -66,26 +70,14 @@ label {
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
 }
-
-
-/* Position the "next button" to the right */
-
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-
-
-/* On hover, add a black background color with a little bit see-through */
-
 .prev:hover,
 .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
-
-
-/* Caption text */
-
 .blog-slider__text {
     color: #f2f2f2;
     font-size: 15px;
@@ -95,10 +87,6 @@ label {
     width: 100%;
     text-align: center;
 }
-
-
-/* Number text (1/3 etc) */
-
 .blog-slider__numbertext {
     color: #f2f2f2;
     font-size: 12px;
@@ -106,10 +94,6 @@ label {
     position: absolute;
     top: 0;
 }
-
-
-/* The dots/bullets/indicators */
-
 .blogSlider__dots {
     text-align: center;
     &--dot {
@@ -123,22 +107,16 @@ label {
         transition: background-color 0.6s ease;
     }
 }
-
 .active,
 .blogSlider__dots--dot:hover {
     background-color: #717171;
 }
-
-
-/* Fading animation */
-
 .fade {
     -webkit-animation-name: fade;
     -webkit-animation-duration: 1.5s;
     animation-name: fade;
     animation-duration: 1.5s;
 }
-
 @-webkit-keyframes fade {
     from {
         opacity: .4
@@ -147,7 +125,6 @@ label {
         opacity: 1
     }
 }
-
 @keyframes fade {
     from {
         opacity: .4
@@ -155,7 +132,7 @@ label {
     to {
         opacity: 1
     }
-}
+} */
 
 /*slideshow user*/
 
