--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -51,6 +51,12 @@ label {
     z-index: 10
 }
 
+#slides_container img {
+    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+}
+
 
 /* Slideshow container */
 
