--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -42,13 +42,17 @@ label {
     display: none;
     position: absolute;
     top: 40px;
+    margin-bottom: 40px;
     left: 40px;
+    height: 700px;
     width: 320px;
     padding: 40px;
     padding-right: 20px;
     background-color: #fff;
     background-color: rgba(255, 255, 255, 0.7);
-    z-index: 10
+    z-index: 10;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 #slides_container img {
@@ -258,4 +262,86 @@ label {
     height: 8px;
     border-radius: 50%;
     background: white;
+}
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    /*position: absolute;
+    top: 0;
+    top: 50%;*/
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.blogSlider__dots {
+    text-align: center;
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.--dot {
+    cursor: pointer;
+    height: 10px;
+    width: 10px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.blogSlider__dots--dot:hover {
+    background-color: #717171;
 }
