--- a/views/maps/new.hbs
+++ b/views/maps/new.hbs
@@ -40,7 +40,7 @@
         <div class="form-group">
             <label for="image">Enter image url</label>
             <input name="image" type="text" class="form-control image" id="image"
-            placeholder="Enter image" value="image">
+            placeholder="Enter image">
             </div>
 
         <div class="form-group">
